--- a/modules/custom/reserve_movies/templates/movie-list.html.twig
+++ b/modules/custom/reserve_movies/templates/movie-list.html.twig
@@ -15,15 +15,27 @@
     <ol> 
     {% if movies is not empty %}
         {% for movie in movies %}
-        <div class = "movie-class">
-            <li> 
-                <hr>
-                <h3>{{movie.title.value}}</h3>
-                <h6>{{movie.field_description.value}}</h6>
-                <img src="{{ file_url(movie.field_poster_image.entity.uri.value) }}" class="img"><br>
-            </li>
-            <button class="reserve-movies-button" data-testid="reserve-movies-button"> Reserve movie </button>
-            <hr>
+        <div class = "movie-class" id="movie-{{movie.nid.value}}">
+            <div>
+                <li> 
+                    <h3>{{movie.title.value}}</h3>
+                    <h6>{{movie.field_description.value}}</h6>
+                    <img src="{{ file_url(movie.field_poster_image.entity.uri.value) }}" class="img"><br>
+                    <hr>
+                </li>
+            </div>
+            <button class="reserve-movies-button" id="reservation-button-{{movie.nid.value}}" data-testid="reserve-movies-button"> Reserve movie </button>
+            <div class="pop-up" id="popup-{{movie.nid.value}}" data-testid="reservation-popup">
+                <form>
+                  {% for day in movie.field_available_days %}
+                    <input type="radio" value="{{ day.value }}" name="choice" data-testid="chosen-day"><span>{{ day.value }}</span>
+                  {% endfor %}
+                    <input type="button" name="cancel" value="x" class = "cancel-button" id = "cancel-{{movie.nid.value}}">
+                </form>
+            </div>
+            <button type="submit" class="confirm-reservation-button" id="confirm-reservation-button-{{movie.nid.value}}" data-testid="reservation-confirm">
+                Confirm reservation for the selected day ?
+            </button>
         </div>    
         {% endfor %}
     {% else %}
